[project]
name    = "ietfdb"
version = "0.0.1"
authors = [
  { name="Colin Perkins", email="csp@csperkins.org" },
]
description = "Mirror the IETF Datatracker to sqlite"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/csperkins/ietfdb"
Issues   = "https://github.com/csperkins/ietfdb/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

